force-app/main/default/objects/Addendum__c/Addendum__c.object-meta.xml
<CustomObject>
    <description>Represents a change to existing contractual terms</description>
    <label>Addendum</label>
    <nameField>
        <label>Addendum Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addenda</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>