force-app/main/default/objects/Addendum__c/fields/Addendum_Signer__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Addendum Signer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Addenda</relationshipLabel>
    <relationshipName>Addenda</relationshipName>
    <type>Lookup</type>
</CustomField>