force-app/main/default/objects/Addendum__c/fields/CongaTemplateID__c.field-meta.xml
<CustomField>
    <fullName>CongaTemplateID__c</fullName>
    <formula>&quot;a3C31000000DVQW&quot;
/*CASE( TemplateID__c ,
&quot;SR Platform&quot;, &quot;a3C31000000DVQW&quot;,
&quot;SR Platform,SR Schedule&quot;, &quot;a3C31000000DVQb&quot;,
&quot;SR Platform,Healthgrades&quot;, &quot;a3C31000000DVQg&quot;,
&quot;SR Platform,SR Schedule,Healthgrades&quot;, &quot;a3C31000000DVQl&quot;,
&quot;SR Schedule&quot;, &quot;a3C31000000DVQq&quot;,
&quot;SR Schedule,Healthgrades&quot;, &quot;a3C31000000DVQv&quot;,
&quot;Healthgrades&quot;, &quot;a3C31000000DVR0&quot;,
null)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CongaTemplateID</label>
    <type>Text</type>
</CustomField>