force-app/main/default/objects/Addendum__c/fields/Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Months__c</fullName>
    <label>Contract Term Months</label>
    <summarizedField>Addendum_Line_Item__c.New_Contract_Term_Months__c</summarizedField>
    <summaryForeignKey>Addendum_Line_Item__c.Addendum__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>