force-app/main/default/objects/Addendum__c/fields/CoTerm_Change__c.field-meta.xml
<CustomField>
    <fullName>CoTerm_Change__c</fullName>
    <label>CoTerm Change</label>
    <length>50</length>
    <type>Text</type>
</CustomField>