force-app/main/default/objects/Addendum__c/fields/CoTerm_Dates__c.field-meta.xml
<CustomField>
    <fullName>CoTerm_Dates__c</fullName>
    <label>CoTerm Dates</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>