force-app/main/default/objects/Addendum__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>Rollup from Addendum Line Item</description>
    <label>Data</label>
    <length>100</length>
    <type>Text</type>
</CustomField>