force-app/main/default/objects/Addendum__c/fields/Minimum_Number_of_Modifications__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Number_of_Modifications__c</fullName>
    <description>Used to validate that all products on Addendum have at least one modification.</description>
    <label>Minimum Number of Modifications</label>
    <summarizedField>Addendum_Line_Item__c.Number_of_Modifications__c</summarizedField>
    <summaryForeignKey>Addendum_Line_Item__c.Addendum__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>