force-app/main/default/objects/Addendum__c/fields/New_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Start_Date__c</fullName>
    <label>New Contract Start Date</label>
    <summarizedField>Addendum_Line_Item__c.New_Contract_Start_Date__c</summarizedField>
    <summaryForeignKey>Addendum_Line_Item__c.Addendum__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>