force-app/main/default/objects/Addendum__c/fields/New_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Renewal_Date__c</fullName>
    <label>New Renewal Date</label>
    <type>Date</type>
</CustomField>