force-app/main/default/objects/Addendum__c/fields/New_Subscription_Needed__c.field-meta.xml
<CustomField>
    <fullName>New_Subscription_Needed__c</fullName>
    <label>New Subscription Needed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>