force-app/main/default/objects/Addendum__c/fields/QueueID__c.field-meta.xml
<CustomField>
    <fullName>QueueID__c</fullName>
    <formula>CASE( Owner:User.UserRole.Name , 
&quot;CSR - Implementation&quot;, &quot;00G31000004WOhG&quot;, 
&quot;00G31000004WOhG&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QueueID</label>
    <type>Text</type>
</CustomField>