force-app/main/default/objects/Addendum__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Needs Accounting Data</fullName>
            </value>
            <value>
                <fullName>Accounting Data Received</fullName>
            </value>
            <value>
                <fullName>Ready For Processing</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Signature Requested</fullName>
            </value>
            <value>
                <fullName>Signature Expired</fullName>
            </value>
            <value>
                <fullName>Signature Declined</fullName>
            </value>
            <value>
                <fullName>Signature Received</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>