force-app/main/default/objects/Addendum__c/fields/Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_ID__c</fullName>
    <formula>Account__r.Subscriber_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscriber ID</label>
    <type>Text</type>
</CustomField>