force-app/main/default/objects/Addendum__c/fields/Template_Available__c.field-meta.xml
<CustomField>
    <fullName>Template_Available__c</fullName>
    <formula>CASE( TemplateID__c ,
&quot;SR Platform&quot; , 0,
&quot;SR Platform,Limelight&quot; , 0,
&quot;SR Platform,Healthgrades&quot; , 0,
&quot;SR Platform,Limelight,Healthgrades&quot; , 0,
&quot;Limelight&quot; , 0,
&quot;Limelight,Healthgrades&quot; , 0,
&quot;Healthgrades&quot; , 0,
1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>