force-app/main/default/objects/Addendum__c/listViews/Accounting_Queue_Addendum.listView-meta.xml
<ListView>
    <fullName>Accounting_Queue_Addendum</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Accounting Queue</label>
    <queue>Accounting_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>