force-app/main/default/objects/Addendum__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account__c</columns>
    <columns>Comments__c</columns>
    <columns>Addendum_Signer__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>