force-app/main/default/objects/Addendum__c/listViews/Onboarding_Addenda_Addendum.listView-meta.xml
<ListView>
    <fullName>Onboarding_Addenda_Addendum</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Comments__c</columns>
    <columns>Account__c</columns>
    <columns>Addendum_Signer__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Onboarding Addenda</label>
    <queue>Onboarding_Addenda</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>